projects/compiler/test/parser/export_error_before_expr.out
Error at %FILE_NAME%:1:5
Unexpected token 'identifier', expected one of 'val', 'var', 'func', 'type', 'enum', 'decorator':
  |  pub a + 1
         ^